[레거시 리팩터링 - 2단계] 도기(김동호) 미션 제출합니다. (#561)
* docs: 단계별로 나누어 README 작성

* remove: JdbcTemplate Dao 전체 삭제

* remove: ControllerTest 전체 삭제

* rename: MockTest 패키지 위치 변경

* chore: JPA 사용을 위한 ddl-auto 속성 추가

* docs: 조금은 높아진 도메인 지식으로 요구사항 재정의

* feat: 도메인별 JpaRepository 생성

* feat: 서비스 리팩터링

* remove: MockTest 어노테이션 제거

* test: 실패하는 테스트 수정

* style: 상수 아래에 개행 추가

* refactor: 모든 커스텀 예외가 BaseException을 상속받도록 수정

* refactor: 파라미터 변수명 수정

* feat: 테이블 그룹 생성 시에 존재하지 않는 테이블로 요청을 보냈을 경우의 예외 검증 로직 추가

* fix: Menu 저장 시에 MenuProduct를 저장하지 않는 현상 수정

* rename: IntegrationTest 어노테이션 패키지 위치 변경

* refactor: 잘못 사용중이던 생성자 제거

* feat: Price 값객체 추가

* refactor: Price VO를 사용하도록 리팩터링

* fix: Price 객체에 null 체크 빠진 부분 추가

* feat: 수량을 나타내는 Quantity 값객체 추가

* refactor: Quantity 객체를 사용하도록 수정

* fix: Price의 잘못된 생성자 타입 변경

* test: 성공 케이스 테스트 시에 값 검증을 하도록 수정

* refactor: 도메인 객체에서 List 타입의 필드에 final 추가

* style: 생성자 위치 변경

* refactor: OrderLineItem이 Quantity를 사용하도록 수정